--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -20,7 +20,7 @@ header {
   width: 30px;
   height: 4px;
   margin: 0 0 5px 0;
-  background: #000;
+  background: #999;
   transition: all 0.8s ease-in-out;
 }
 
@@ -159,11 +159,37 @@ header {
   padding: 0;
   line-height: 1.6;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
+  width: 100vw;
+  height: 100vh;
+  background: url("img/bgv_.gif");
+  background-size: cover;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+}
+
+.title {
+  position: absolute;
+  background: #fff;
+  width: 100vw;
+  height: 100vh;
+  color: #000;
+  mix-blend-mode: exclusion;
+  font-size: 40px;
+  padding-top: 15%;
   text-align: center;
-  transition: 1s ease-in-out;
+}
+
+.title h6 {
+  font-size: 25px;
+}
+
+.portrait {
+  background: url("img/Buffalo.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
 }
 
 #wrapper {
@@ -637,5 +663,25 @@ button.layered {
 
   .overlay-panel h1 {
     padding-bottom: 48px;
+  }
+}
+
+@media screen and (max-height: 850px) and (max-width: 450px) {
+  .part-1 h1 {
+    font-size: 3.3rem;
+  }
+
+  .part-1 h6 {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (min-height: 320px) and (max-height: 420px) {
+  .part-1 h1 {
+    font-size: 2.7rem;
+  }
+
+  .part-1 h6 {
+    font-size: 1rem;
   }
 }
