--- a/css/appProjects.css
+++ b/css/appProjects.css
@@ -165,7 +165,7 @@ header {
   width: 100vw;
   min-height: 100vh;
   background-color: #777;
-  background-image: url("img/Buffalo.png");
+  background-image: url("img/bg_Architecture.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -197,23 +197,29 @@ header {
 
 /**/
 .main {
-  text-align: center;
-  width: 90%;
   opacity: 0;
   transition: opacity 2s ease-in;
+  padding: 20;
 }
 
 .main h2 {
-  font-family: "Shadows Into Light", cursive;
-  font-size: 30px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 40px;
+  letter-spacing: 0.75rem;
   color: #fff;
 }
 
 .main p {
-  font-family: "Amatic SC", cursive;
-  font-size: 35px;
+  font-family: "Shadows Into Light", cursive;
+  font-size: 20px;
   font-weight: bolder;
   color: rgb(235, 250, 239);
+}
+
+.main span {
+  color: #222;
+  font-size: 0.9rem;
 }
 
 @keyframes bounce {
@@ -358,5 +364,12 @@ header {
   .overlay-panel h1 {
     font-size: 1.8rem;
     padding-bottom: 55px;
+  }
+}
+
+@media screen and (max-height: 850px) and (max-width: 450px) {
+  .main h2 {
+    font-size: 20px;
+    letter-spacing: 0.5rem;
   }
 }
