--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -674,6 +674,10 @@ button.layered {
   .part-1 h6 {
     font-size: 1rem;
   }
+
+  .portrait {
+    display: none;
+  }
 }
 
 @media screen and (min-height: 320px) and (max-height: 420px) {
@@ -683,5 +687,9 @@ button.layered {
 
   .part-1 h6 {
     font-size: 1rem;
+  }
+
+  .portrait {
+    display: none;
   }
 }
