--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -20,7 +20,7 @@ header {
   width: 30px;
   height: 4px;
   margin: 0 0 5px 0;
-  background: #999;
+  background: #5facca;
   transition: all 0.8s ease-in-out;
 }
 
@@ -170,13 +170,13 @@ header {
 
 .title {
   position: absolute;
-  background: #fff;
+  background: rgb(238, 229, 229);
   width: 100vw;
   height: 100vh;
   color: #000;
   mix-blend-mode: exclusion;
   font-size: 40px;
-  padding-top: 15%;
+  padding-top: 14%;
   text-align: center;
 }
 
@@ -620,6 +620,11 @@ button.layered {
     align-items: center;
     text-align: center;
   }
+
+  .title {
+    text-align: left;
+    margin-left: 5%;
+  }
 }
 
 @media screen and (max-height: 550px) {
@@ -681,6 +686,11 @@ button.layered {
 }
 
 @media screen and (min-height: 320px) and (max-height: 420px) {
+  .title {
+    padding-top: 7%;
+    font-size: 20px;
+  }
+
   .part-1 h1 {
     font-size: 2.7rem;
   }
