--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,47 @@
   transition-delay: 0.45s;
 }
 
+.notice-container {
+  position: absolute;
+  background: black;
+  color: white;
+  width: 50vw;
+  height: 100vh;
+  z-index: 104;
+  transition: all 0.5s ease-in-out;
+}
+.notice {
+  font-size: 1rem;
+  padding-top: 30%;
+  text-align: center;
+}
+.notice h6 {
+  font-size: 1rem;
+  font-family: "Permanent Marker", cursive;
+}
+.notice p {
+  font-size: 1.5rem;
+  font-family: "Shadows Into Light", cursive;
+  color: orange;
+}
+.notice h4 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+.x-button {
+  font-family: "Shadows Into Light", cursive;
+  font-size: 1.1rem;
+  position: absolute;
+  top: 6%;
+  left: 7%;
+  cursor: pointer;
+}
+.x-button:hover {
+  color: orange;
+}
+.notice-container.hide {
+  display: none;
+}
+
 /**/
 @media screen and (max-width: 320px) {
   .menu-showcase .showcase {
@@ -146,6 +187,9 @@
   }
   #home .lg-heading {
     font-size: 1.6rem;
+  }
+  .notice-container {
+    width: 100vw;
   }
 }
 
@@ -168,11 +212,17 @@
   main .icons i {
     font-size: 0.9rem;
   }
+  .notice-container {
+    width: 100vw;
+  }
 }
 
 @media screen and (max-width: 500px) {
   main#home {
     margin-top: 10vh;
+  }
+  .notice-container {
+    width: 100vw;
   }
 }
 
@@ -200,6 +250,9 @@
   .menu-showcase {
     height: 25vh;
     transform: translate3d(100%, 0, 0);
+  }
+  .notice-container {
+    width: 100vw;
   }
 }
 
@@ -252,6 +305,12 @@
   }
   .menu-showcase {
     display: none;
+  }
+  .notice-container {
+    width: 100vw;
+  }
+  .notice {
+    padding-top: 9%;
   }
 }
 
@@ -374,7 +433,7 @@ main#home h1 {
 
 .color-theme-btn {
   position: absolute;
-  z-index: 3;
+  z-index: 1;
   right: 35px;
   bottom: 35px;
   cursor: pointer;
